--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "knex": "^0.21.17",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2",
     "valid-url": "^1.0.9",
@@ -27,6 +28,7 @@
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.7",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^6.1.3"
   }
 }
